# mustard

./: README.md
include/: cli.h  utils.h
mustard/: CMakeLists.txt  lu_mustard.cu  lu_mustard_p.cu  mustard.h
scripts/: calc.py  chol_all.sh  lu_all.sh
src/baselines/cholesky/MgPotrf/: Makefile  cusolver_MgPotrf_example1.cu
src/baselines/lu/MgGetrf/: Makefile  cusolver_MgGetrf_example  cusolver_MgGetrf_example.cu
src/mustard/: lu_partg_fuse.cu
src/res/: chol_all.sh
